adicionando update button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                 <h1>IMC<br>Calculator</h1>
             </header>
 
+            <div id="home">
+                <a href="index.html"><img src="assets/update.svg" alt="Home"></a>
+            </div>
+
             <div id="display">
 
                 <form id="form">
@@ -68,6 +72,9 @@
             </div>
 
         </div>
+        <footer>
+            <a href="https://github.com/GuEscudeiro" target="_blank"><h1>GuEscudeiro.dev</h1></a>
+        </footer>
     
     <script src="script.js"></script>
 
